# practice

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/PYTHON-10/: final_task.ipynb  module_tasks.ipynb
src/PYTHON-11/: final_task.ipynb  module_tasks.ipynb  module_tasks.py
src/PYTHON-11/data/: ufo.csv
src/PYTHON-12/: module_tasks.ipynb
src/PYTHON-8/guess_game/: README.md  game.ipynb  game_v1.py  game_v2.py
src/PYTHON-8/playgraund/: tasks.py
