[project]
name = "sandbox-data-science"
version = "0.1.0"
description = "Data Science - Практика Skillfactory"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
(\.git|\.venv|env|build|dist)
'''

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "pytest>=7.0"
]
